Added device-tree for TS-718A; removed the 100k pull-up on the POWER_FAIL line (TS-7180).

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -376,6 +376,7 @@ dtb-$(CONFIG_SOC_IMX6UL) += \
 	imx6ul-ts4100.dtb \
 	imx6ul-ts4100-2.dtb \
 	imx6ul-ts7180.dtb \
+	imx6ul-ts718A.dtb \
 	imx6ul-ts7553v2.dtb \
 	imx6ul-14x14-ddr3-arm2.dtb \
 	imx6ul-14x14-ddr3-arm2-emmc.dtb	\
