--- a/arch/arm/configs/ts4900_android_defconfig
+++ b/arch/arm/configs/ts4900_android_defconfig
@@ -1687,6 +1687,12 @@ CONFIG_WLAN=y
 # CONFIG_RTL8187 is not set
 # CONFIG_MAC80211_HWSIM is not set
 # CONFIG_ATH_CARDS is not set
+CONFIG_ATMEL_SMARTCONNECT=y
+CONFIG_WILC3000=m
+# CONFIG_WILC3000_SDIO is not set
+CONFIG_WILC3000_SPI=y
+# CONFIG_WILC3000_DEBUG is not set
+# CONFIG_WILC1000 is not set
 # CONFIG_B43 is not set
 # CONFIG_B43LEGACY is not set
 # CONFIG_BCMDHD is not set
