Removed rfkill which is not supported by our wifi modules

--- a/arch/arm/configs/ts4900_android_defconfig
+++ b/arch/arm/configs/ts4900_android_defconfig
@@ -369,7 +369,6 @@ CONFIG_SOC_VF610=y
 CONFIG_VF_USE_ARM_GLOBAL_TIMER=y
 # CONFIG_VF_USE_PIT_TIMER is not set
 # CONFIG_SOC_LS1021A is not set
-CONFIG_MACH_IMX_BLUETOOTH_RFKILL=y
 CONFIG_MXC_REBOOT_ANDROID_CMD=y
 CONFIG_MX6_RAMOOPS=y
 # CONFIG_ARCH_MEDIATEK is not set
@@ -1151,12 +1150,8 @@ CONFIG_MAC80211_RC_DEFAULT="minstrel_ht"
 # CONFIG_MAC80211_MESSAGE_TRACING is not set
 # CONFIG_MAC80211_DEBUG_MENU is not set
 # CONFIG_WIMAX is not set
-CONFIG_RFKILL=y
-CONFIG_RFKILL_PM=y
-CONFIG_RFKILL_LEDS=y
-CONFIG_RFKILL_INPUT=y
+# CONFIG_RFKILL is not set
 # CONFIG_RFKILL_REGULATOR is not set
-CONFIG_RFKILL_GPIO=y
 # CONFIG_NET_9P is not set
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
@@ -1674,7 +1669,6 @@ CONFIG_USB_NET_ZAURUS=y
 # CONFIG_USB_NET_CX82310_ETH is not set
 # CONFIG_USB_NET_KALMIA is not set
 # CONFIG_USB_NET_QMI_WWAN is not set
-# CONFIG_USB_HSO is not set
 # CONFIG_USB_NET_INT51X1 is not set
 # CONFIG_USB_IPHETH is not set
 # CONFIG_USB_SIERRA_NET is not set
@@ -3730,7 +3724,6 @@ CONFIG_STAGING=y
 # CONFIG_RTLLIB is not set
 # CONFIG_R8712U is not set
 # CONFIG_R8188EU is not set
-# CONFIG_R8723AU is not set
 # CONFIG_VT6656 is not set
 
 #
