--- a/arch/arm/configs/ts4900_android_defconfig
+++ b/arch/arm/configs/ts4900_android_defconfig
@@ -1122,6 +1122,7 @@ CONFIG_BT_HCIUART_ATH3K=y
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
 # CONFIG_BT_ATH3K is not set
+# CONFIG_BT_WILINK is not set
 # CONFIG_AF_RXRPC is not set
 CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
@@ -1401,7 +1402,7 @@ CONFIG_EEPROM_AT25=y
 #
 # Texas Instruments shared transport line discipline
 #
-# CONFIG_TI_ST is not set
+CONFIG_TI_ST=y
 # CONFIG_SENSORS_LIS3_SPI is not set
 # CONFIG_SENSORS_LIS3_I2C is not set
 
