TS-4100:   Added PHY reset control for ethernet over GPIO

--- a/arch/arm/boot/dts/imx6ul-ts4100.dtsi
+++ b/arch/arm/boot/dts/imx6ul-ts4100.dtsi
@@ -173,6 +173,8 @@
 	pinctrl-0 = <&pinctrl_enet1>;
 	phy-mode = "rmii";
 	phy-handle = <&ethphy0>;
+	phy-reset-gpios = <&gpio6 24 GPIO_ACTIVE_HIGH>;
+	phy-reset-duration = <10>;
 	status = "okay";
 };
 
@@ -181,6 +183,8 @@
 	pinctrl-0 = <&pinctrl_enet2>;
 	phy-mode = "rmii";
 	phy-handle = <&ethphy1>;
+	phy-reset-gpios = <&gpio6 24 GPIO_ACTIVE_HIGH>;
+	phy-reset-duration = <10>;
 	status = "okay";
 
 	mdio {
