--- a/arch/arm/boot/dts/imx6ul-ts4100.dtsi
+++ b/arch/arm/boot/dts/imx6ul-ts4100.dtsi
@@ -95,7 +95,7 @@
 		#address-cells = <1>;
 		#size-cells = <0>;
 
-		reg_gpio_dvfs: regulator-gpio {
+		reg_gpio_dvfs: regulator-gpio@0 {
 			compatible = "regulator-gpio";
 			pinctrl-names = "default";
 			pinctrl-0 = <&pinctrl_dvfs>;
@@ -105,6 +105,15 @@
 			regulator-type = "voltage";
 			gpios = <&gpio5 3 GPIO_ACTIVE_HIGH>;
 			states = <1300000 0x1 1400000 0x0>;
+		};
+
+		reg_phy: regulator@1 {
+			compatible = "regulator-fixed";
+			regulator-name = "gpio_phy";
+			regulator-min-microvolt = <3300000>;
+			regulator-max-microvolt = <3300000>;
+			gpios = <&gpio1 10 GPIO_ACTIVE_HIGH>;
+			enable-active-high;
 		};
 
 		reg_usb_otg1_vbus: regulator@2 {
@@ -161,9 +170,9 @@
 		compatible = "atmel,wilc_spi";
 		reg = <0>;
 		spi-max-frequency = <24000000>;
-		wilc3000,reset-gpios = <&gpio6 21 0>;      /* RESET,  GPIO 181 */
-		wilc3000,chip-en-gpios = <&gpio6 20 0>;    /* ENABLE, GPIO 180 */
-		wilc3000,irq-gpios = <&gpio5 8 0>;         /* IRQ,    GPIO 136 */
+		wilc3000,reset-gpios = <&gpio6 21 0>;     /* RESET,  GPIO 181 */
+		wilc3000,chip-en-gpios = <&gpio6 20 0>;	  /* ENABLE, GPIO 180 */
+		wilc3000,irq-gpios = <&gpio5 8 0>;	  /* IRQ,    GPIO 136 */
 		status = "okay";
     };
 };
@@ -173,6 +182,9 @@
 	pinctrl-0 = <&pinctrl_enet1>;
 	phy-mode = "rmii";
 	phy-handle = <&ethphy0>;
+	phy-reset-gpios = <&gpio4 16 GPIO_ACTIVE_HIGH>;
+	phy-reset-duration = <10>;
+	phy-supply = <&reg_phy>;
 	status = "okay";
 };
 
@@ -181,6 +193,9 @@
 	pinctrl-0 = <&pinctrl_enet2>;
 	phy-mode = "rmii";
 	phy-handle = <&ethphy1>;
+	phy-reset-gpios = <&gpio4 16 GPIO_ACTIVE_HIGH>;
+	phy-reset-duration = <10>;
+	phy-supply = <&reg_phy>;
 	status = "okay";
 
 	mdio {
@@ -444,6 +459,7 @@
 			fsl,pins = <
 				MX6UL_PAD_GPIO1_IO07__ENET2_MDC		0x1b0b0
 				MX6UL_PAD_GPIO1_IO06__ENET2_MDIO	0x1b0b0
+				MX6UL_PAD_NAND_DQS__GPIO4_IO16		0x1b0b0
 				MX6UL_PAD_JTAG_MOD__GPIO1_IO10      0x1f0b0
 				MX6UL_PAD_ENET2_RX_EN__ENET2_RX_EN	0x1b0b0
 				MX6UL_PAD_ENET2_RX_ER__ENET2_RX_ER	0x1b0b0
@@ -498,8 +514,10 @@
 				MX6UL_PAD_SD1_DATA1__USDHC1_DATA1    0x17059
 				MX6UL_PAD_SD1_DATA2__USDHC1_DATA2    0x17059
 				MX6UL_PAD_SD1_DATA3__USDHC1_DATA3    0x17059
-				MX6UL_PAD_SNVS_TAMPER9__GPIO5_IO09   0x17059 /* EN_SD_POWER */
-				MX6UL_PAD_GPIO1_IO05__USDHC1_VSELECT 0x17059 /* SD1 VSELECT */
+				/* EN_SD_POWER */
+				MX6UL_PAD_SNVS_TAMPER9__GPIO5_IO09   0x17059 
+				/* SD1 VSELECT */
+				MX6UL_PAD_GPIO1_IO05__USDHC1_VSELECT 0x17059 
 			>;
 		};
 
@@ -538,11 +556,13 @@
 
 		pinctrl_ecspi3: ecspi3grp {
 			fsl,pins = <
-				MX6UL_PAD_NAND_READY_B__GPIO4_IO12  0x10b0 // SPI_3_FPGA_CS#
+				// SPI_3_FPGA_CS#
+				MX6UL_PAD_NAND_READY_B__GPIO4_IO12  0x10b0 
 				MX6UL_PAD_NAND_CE0_B__ECSPI3_SCLK   0x10b0
 				MX6UL_PAD_NAND_CE1_B__ECSPI3_MOSI   0x10b0
 				MX6UL_PAD_NAND_CLE__ECSPI3_MISO     0x10b0
-				MX6UL_PAD_NAND_ALE__GPIO4_IO10      0x10b0 // SPI_3_OFF_BD_CS#
+				// SPI_3_OFF_BD_CS#
+				MX6UL_PAD_NAND_ALE__GPIO4_IO10      0x10b0 
 			>;
 		};
 
@@ -551,8 +571,10 @@
 				MX6UL_PAD_NAND_DATA04__ECSPI4_SCLK  0x10b0
 				MX6UL_PAD_NAND_DATA05__ECSPI4_MOSI  0x10b0
 				MX6UL_PAD_NAND_DATA06__ECSPI4_MISO  0x10b0
-				MX6UL_PAD_NAND_DATA07__GPIO4_IO09   0x10b0  // WIFI chip select
-				MX6UL_PAD_SNVS_TAMPER8__GPIO5_IO08  0x1b020 // SPARE_4/WIFI_IRQ
+				// WIFI chip select
+				MX6UL_PAD_NAND_DATA07__GPIO4_IO09   0x10b0  
+				// SPARE_4/WIFI_IRQ
+				MX6UL_PAD_SNVS_TAMPER8__GPIO5_IO08  0x1b020 
 			>;
 		};
 
