--- a/arch/arm/boot/dts/imx6ul-ts7553v2.dts
+++ b/arch/arm/boot/dts/imx6ul-ts7553v2.dts
@@ -60,6 +60,12 @@
 			gpios = <&gpio1 9 GPIO_ACTIVE_HIGH>;
 			default-state = "off";
 		};
+
+		en-can {
+			label = "en-can";
+			gpios = <&gpio5 9 GPIO_ACTIVE_LOW>;
+			default-state = "on";
+		};
 	};
 
 		gpio-keys {
@@ -408,6 +414,7 @@
 				MX6UL_PAD_JTAG_TDI__GPIO1_IO13       0x1b020
 				MX6UL_PAD_JTAG_TDO__GPIO1_IO12       0x1b020
 				MX6UL_PAD_JTAG_TMS__GPIO1_IO11       0x1b020
+				MX6UL_PAD_SNVS_TAMPER9__GPIO5_IO09   0x1b020 /* EN_RELAY */
 				MX6UL_PAD_JTAG_TRST_B__GPIO1_IO15    0x1b020
 				MX6UL_PAD_CSI_DATA00__GPIO4_IO21     0x1a020 /* KEYPAD_0 */
 				MX6UL_PAD_CSI_DATA01__GPIO4_IO22     0x1a020 /* KEYPAD_1 */
