--- a/arch/arm/boot/dts/imx6ul-ts7553v2.dts
+++ b/arch/arm/boot/dts/imx6ul-ts7553v2.dts
@@ -117,6 +117,7 @@
 
 	aliases {
 		ethernet0 = &fec1;
+		i2c3 = &i2cgpio;
 	};
 
 	pxp_v4l2 {
@@ -162,6 +163,18 @@
 			gpio = <&gpio3 12 GPIO_ACTIVE_HIGH>;
 			enable-active-high;
 		};
+	};
+
+	i2cgpio: i2cgpio {
+		compatible = "i2c-gpio";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2cgpio>;
+		gpios = <&gpio5 5 GPIO_ACTIVE_HIGH>, /* sda */
+			<&gpio5 4 GPIO_ACTIVE_HIGH>; /* scl */
+		i2c-gpio,delay-us = <2>; /* 100khz*/
+		#address-cells = <1>;
+		#size-cells = <0>;
+		status = "okay";
 	};
 };
 
@@ -446,7 +459,6 @@
 				MX6UL_PAD_LCD_DATA19__GPIO3_IO24     0x1b020 /* RES_STRAP_1 */
 				MX6UL_PAD_LCD_DATA22__GPIO3_IO27     0x1b020 /* RES_STRAP_2 */
 				MX6UL_PAD_LCD_DATA23__GPIO3_IO28     0x1b020 /* RES_STRAP_3 */
-				MX6UL_PAD_LCD_ENABLE__GPIO3_IO01     0x1b020 /* WIFI_PRESENT# */
 			>;
 		};
 
@@ -578,6 +590,14 @@
 			fsl,pins = <
 				MX6UL_PAD_LCD_DATA01__GPIO3_IO06        0x4001a8b0
 				MX6UL_PAD_LCD_DATA00__GPIO3_IO05	0x4001a8b0
+			>;
+		};
+
+		pinctrl_i2cgpio: i2cgrpgpio {
+			fsl,pins = <
+				MX6UL_PAD_SNVS_TAMPER4__GPIO5_IO04      0x4001a8b0
+				MX6UL_PAD_SNVS_TAMPER5__GPIO5_IO05	0x4001a8b0
+				MX6UL_PAD_LCD_ENABLE__GPIO3_IO01        0x13020
 			>;
 		};
 
