TS-7553-V2:   Changed I2C1 from CPU peripheral to i2c-gpio   CPU peripheral caused issues when rebooting/halting.  The driver would   attempt to schedule work when no work was allowed to be scheduled at   that point in the shutdown process.  This would end up with a large amount   of BUG messages being printed.  There were no observed issues with this,   however it is still a BUG and could cause problems in corner cases.   Testing of the I2C pins as GPIO have shown this message is no longer given   and all reboot/halt processes work as normal.

--- a/arch/arm/boot/dts/imx6ul-ts7553v2.dts
+++ b/arch/arm/boot/dts/imx6ul-ts7553v2.dts
@@ -118,6 +118,7 @@
 	aliases {
 		ethernet0 = &fec1;
 		i2c3 = &i2cgpio;
+		i2c0 = &i2c1gpio;
 	};
 
 	pxp_v4l2 {
@@ -175,6 +176,28 @@
 		#address-cells = <1>;
 		#size-cells = <0>;
 		status = "okay";
+	};
+
+	i2c1gpio: i2c1gpio {
+		compatible = "i2c-gpio";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c1_gpio>;
+		gpios = <&gpio1 3 GPIO_ACTIVE_HIGH>, /* sda */
+			<&gpio1 2 GPIO_ACTIVE_HIGH>; /* scl */
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		status = "okay";
+
+		rtc: m41t00s@68 {
+			compatible = "m41t00";
+			reg = <0x68>;
+		};
+
+		silabs: silabs@2a {
+			compatible = "ts-wdt";
+			reg = <0x2a>;
+		};
 	};
 };
 
@@ -369,26 +392,6 @@
 	status = "okay";
 };
 
-&i2c1 {
-	clock-frequency = <100000>;
-	pinctrl-names = "default", "gpio";
-	pinctrl-0 = <&pinctrl_i2c1>;
-	pinctrl-1 = <&pinctrl_i2c1_gpio>;
-	status = "okay";
-	scl-gpios = <&gpio1 2 GPIO_ACTIVE_HIGH>;
-	sda-gpios = <&gpio1 3 GPIO_ACTIVE_HIGH>;
-
-	rtc: m41t00s@68 {
-		compatible = "m41t00";
-		reg = <0x68>;
-	};
-
-	silabs: silabs@2a {
-		compatible = "ts-wdt";
-		reg = <0x2a>;
-	};
-
-};
 
 &i2c3 {
 	clock-frequency = <400000>;
