--- a/arch/arm/boot/dts/imx6ul-ts7553v2.dts
+++ b/arch/arm/boot/dts/imx6ul-ts7553v2.dts
@@ -24,6 +24,7 @@
 
 	leds {
 		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_gpio_leds>;
 		compatible = "gpio-leds";
 
 		green-led {
@@ -454,6 +455,18 @@
 				MX6UL_PAD_LCD_DATA22__GPIO3_IO27     0x1b020 /* RES_STRAP_2 */
 				MX6UL_PAD_LCD_DATA23__GPIO3_IO28     0x1b020 /* RES_STRAP_3 */
 				MX6UL_PAD_SNVS_TAMPER2__GPIO5_IO02   0x1b020
+			>;
+		};
+
+		pinctrl_gpio_leds: gpioledgrp {
+			fsl,pins = <
+				MX6UL_PAD_CSI_VSYNC__GPIO4_IO19      0x1b020 /* Red LED */
+				MX6UL_PAD_CSI_HSYNC__GPIO4_IO20      0x1b020 /* Green LED */
+				MX6UL_PAD_GPIO1_IO01__GPIO1_IO01     0x1b020 /* USB 5 v */
+				MX6UL_PAD_GPIO1_IO08__GPIO1_IO08     0x1b020 /* MODEM 5 v */
+				MX6UL_PAD_GPIO1_IO09__GPIO1_IO09     0x1b020 /* XBee 3.3 v */
+				MX6UL_PAD_SNVS_TAMPER9__GPIO5_IO09   0x1b020 /* CAN En. */
+				MX6UL_PAD_SNVS_TAMPER2__GPIO5_IO02   0x1b020 /* eMMC En. */
 			>;
 		};
 
