--- a/arch/arm/boot/dts/imx6ul-ts7553v2.dts
+++ b/arch/arm/boot/dts/imx6ul-ts7553v2.dts
@@ -158,6 +158,17 @@
 			gpio = <&gpio3 12 GPIO_ACTIVE_HIGH>;
 			enable-active-high;
 		};
+
+		reg_enet_3v3: regulator-phy@0 {
+			compatible = "regulator-fixed";
+			pinctrl-names = "default";
+			pinctrl-0 = <&pinctrl_enet_3v3>;
+			regulator-name = "enet_3v3";
+			regulator-min-microvolt = <3000000>;
+			regulator-max-microvolt = <3000000>;
+			gpio = <&gpio2 10 GPIO_ACTIVE_HIGH>;
+			enable-active-high;
+		};
 	};
 
 	i2cgpio: i2cgpio {
@@ -253,13 +264,12 @@
 };
 
 &fec1 {
-	/* TODO: add eth phy pwr? */
 	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_enet1>;
+	pinctrl-0 = <&pinctrl_enet>;
 	phy-mode = "rmii";
 	phy-handle = <&ethphy0>;
+	phy-supply = <&reg_enet_3v3>;
 	phy-reset-gpios = <&gpio1 4 GPIO_ACTIVE_LOW>;
-	/* Maybe able to do 500us since linux would be a "warm reset" */
 	phy-reset-duration = <10>; 
 	status = "okay";
 	mdio {
@@ -550,7 +560,7 @@
 			>;
 		};
 
-		pinctrl_enet1: enet1grp {
+		pinctrl_enet: enetgrp {
 			fsl,pins = <
 				MX6UL_PAD_GPIO1_IO07__ENET1_MDC         0x1b0b0
 				MX6UL_PAD_GPIO1_IO06__ENET1_MDIO        0x1b0b0
@@ -562,6 +572,12 @@
 				MX6UL_PAD_ENET1_TX_DATA0__ENET1_TDATA00	0x1b0b0
 				MX6UL_PAD_ENET1_TX_DATA1__ENET1_TDATA01	0x1b0b0
 				MX6UL_PAD_ENET1_TX_CLK__ENET1_REF_CLK1	0x4001b031
+			>;
+		};
+
+		pinctrl_enet_3v3: enet3v3grp {
+			fsl,pins = <
+				MX6UL_PAD_ENET2_RX_EN__GPIO2_IO10       0x1b0b0
 			>;
 		};
 
