TS-7553-V2: Set up IO hog for EN_XBEE_USB#

--- a/arch/arm/boot/dts/imx6ul-ts7553v2.dts
+++ b/arch/arm/boot/dts/imx6ul-ts7553v2.dts
@@ -446,6 +446,7 @@
 				MX6UL_PAD_UART2_RTS_B__GPIO1_IO23    0x1b020 /* EN_232_TRANS */
 				MX6UL_PAD_CSI_DATA07__GPIO4_IO28     0x13020 /* DETECT_9471 */
 				MX6UL_PAD_SNVS_TAMPER0__GPIO5_IO00   0x1b020 /* POWER_FAIL */
+				MX6UL_PAD_SNVS_TAMPER7__GPIO5_IO07   0x1b020 /* EN_XBEE_USB# */
 				MX6UL_PAD_SNVS_TAMPER8__GPIO5_IO08   0x1a020 /* EN_RELAY */
 				MX6UL_PAD_ENET2_TX_CLK__GPIO2_IO14   0x1b020 /* XBEE_DIO_8 */
 				MX6UL_PAD_ENET2_RX_DATA0__GPIO2_IO08 0x1b020 /* XBEE_DIO_7 */
