--- a/arch/arm/boot/dts/imx6ul-ts4100.dtsi
+++ b/arch/arm/boot/dts/imx6ul-ts4100.dtsi
@@ -107,15 +107,6 @@
 			states = <1300000 0x1 1400000 0x0>;
 		};
 
-		reg_phy: regulator@1 {
-			compatible = "regulator-fixed";
-			regulator-name = "gpio_phy";
-			regulator-min-microvolt = <3300000>;
-			regulator-max-microvolt = <3300000>;
-			gpios = <&gpio1 10 GPIO_ACTIVE_HIGH>;
-			enable-active-high;
-		};
-
 		reg_usb_otg1_vbus: regulator@2 {
 			compatible = "regulator-fixed";
 			reg = <2>;
@@ -182,9 +173,6 @@
 	pinctrl-0 = <&pinctrl_enet1>;
 	phy-mode = "rmii";
 	phy-handle = <&ethphy0>;
-	phy-reset-gpios = <&gpio4 16 GPIO_ACTIVE_HIGH>;
-	phy-reset-duration = <10>;
-	phy-supply = <&reg_phy>;
 	status = "okay";
 };
 
@@ -193,9 +181,6 @@
 	pinctrl-0 = <&pinctrl_enet2>;
 	phy-mode = "rmii";
 	phy-handle = <&ethphy1>;
-	phy-reset-gpios = <&gpio4 16 GPIO_ACTIVE_HIGH>;
-	phy-reset-duration = <10>;
-	phy-supply = <&reg_phy>;
 	status = "okay";
 
 	mdio {
@@ -335,6 +320,7 @@
 		reg = <0x29>;
 	};
 
+	/* This may need to be reworked here */
 	gpio6: gpio@28 {
 		compatible = "technologic,ts4900-gpio";
 		reg = <0x28>;
@@ -459,7 +445,8 @@
 			fsl,pins = <
 				MX6UL_PAD_GPIO1_IO07__ENET2_MDC		0x1b0b0
 				MX6UL_PAD_GPIO1_IO06__ENET2_MDIO	0x1b0b0
-				MX6UL_PAD_NAND_DQS__GPIO4_IO16		0x1b0b0
+				/* Spare_3, used for eth reset */
+				//MX6UL_PAD_NAND_DQS__GPIO4_IO16		0x1b0b0
 				MX6UL_PAD_JTAG_MOD__GPIO1_IO10      0x1f0b0
 				MX6UL_PAD_ENET2_RX_EN__ENET2_RX_EN	0x1b0b0
 				MX6UL_PAD_ENET2_RX_ER__ENET2_RX_ER	0x1b0b0
