--- a/arch/arm/boot/dts/imx6ul-ts4100.dtsi
+++ b/arch/arm/boot/dts/imx6ul-ts4100.dtsi
@@ -311,13 +311,19 @@
 };
 
 &i2c1 {
-	clock-frequency = <100000>;
-	pinctrl-names = "default", "gpio";
-	pinctrl-0 = <&pinctrl_i2c1>;
-	pinctrl-1 = <&pinctrl_i2c1_gpio>;
+	compatible = "i2c-gpio";
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_i2c1_gpio>;
+	gpios = <&gpio1 3 GPIO_ACTIVE_HIGH>, /* sda */
+		<&gpio1 2 GPIO_ACTIVE_HIGH>; /* scl */
+	#address-cells = <1>;
+	#size-cells = <0>;
 	status = "okay";
-	scl-gpios = <&gpio1 2 GPIO_ACTIVE_HIGH>;
-	sda-gpios = <&gpio1 3 GPIO_ACTIVE_HIGH>;
+
+	silabs: silabs@4a {
+		compatible = "ts-wdt";
+		reg = <0x4a>;
+	};
 };
 
 &i2c3 {
@@ -355,9 +361,7 @@
 };
 
 &wdog1 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_wdog>;
-	fsl,wdog_b;
+	status = "disabled";
 };
 
 &iomuxc {
@@ -484,13 +488,6 @@
 		pinctrl_wdog: wdoggrp {
 			fsl,pins = <
 				MX6UL_PAD_LCD_RESET__WDOG1_WDOG_ANY    0x30b0
-			>;
-		};
-
-		pinctrl_i2c1: i2c1grp {
-			fsl,pins = <
-				MX6UL_PAD_GPIO1_IO02__I2C1_SCL 0x4001b8b0
-				MX6UL_PAD_GPIO1_IO03__I2C1_SDA 0x4001b8b0
 			>;
 		};
 
