--- a/drivers/net/wireless/atmel/Kconfig
+++ b/drivers/net/wireless/atmel/Kconfig
@@ -1,9 +1,13 @@
 menuconfig ATMEL_SMARTCONNECT
-    bool "Atmel SmartConnect wireless cards Driver"
+    bool "Atmel SmartConnect wireless cards Driver (Old driver)"
     depends on WLAN && CFG80211
 #    select WIRELESS_EXT
 #    select WEXT_PRIV
     ---help---
+      NOTE: This module is left in this kernel tree for
+      historic purposes, it is very likely not what you want
+      to be using.
+
       This module adds support for the Atmel wireless drivers.
       
       For more information on the Atmel Wi-Fi products visit:
