--- a/arch/arm/boot/dts/imx6ul-ts4100.dtsi
+++ b/arch/arm/boot/dts/imx6ul-ts4100.dtsi
@@ -145,17 +145,6 @@
 			gpio = <&gpio5 9 GPIO_ACTIVE_HIGH>;
 			enable-active-high;
 		};
-
-		reg_enet_3v3: regulator-phy@0 {
-			compatible = "regulator-fixed";
-			pinctrl-names = "default";
-			pinctrl-0 = <&pinctrl_enet_3v3>;
-			regulator-name = "enet_3v3";
-			regulator-min-microvolt = <3000000>;
-			regulator-max-microvolt = <3000000>;
-			gpio = <&gpio1 10 GPIO_ACTIVE_HIGH>;
-			enable-active-high;
-		};
 	};
 };
 
@@ -202,9 +191,6 @@
 	pinctrl-0 = <&pinctrl_enet1>;
 	phy-mode = "rmii";
 	phy-handle = <&ethphy0>;
-	phy-supply = <&reg_enet_3v3>;
-	phy-reset-gpios = <&gpio4 16 GPIO_ACTIVE_LOW>;
-	phy-reset-duration = <10>;
 	status = "okay";
 };
 
@@ -213,9 +199,6 @@
 	pinctrl-0 = <&pinctrl_enet2>;
 	phy-mode = "rmii";
 	phy-handle = <&ethphy1>;
-	phy-supply = <&reg_enet_3v3>;
-	phy-reset-gpios = <&gpio4 16 GPIO_ACTIVE_LOW>;
-	phy-reset-duration = <10>;
 	status = "okay";
 
 	mdio {
@@ -613,12 +596,6 @@
 			>;
 		};
 
-		pinctrl_enet_3v3: enet3v3grp {
-			fsl,pins = <
-				MX6UL_PAD_JTAG_MOD__GPIO1_IO10		0x1a0b0
-			>;
-		};
-
 		pinctrl_enet1: enet1grp {
 			fsl,pins = <
 				MX6UL_PAD_ENET1_RX_EN__ENET1_RX_EN	0x1b0b0
@@ -636,8 +613,9 @@
 			fsl,pins = <
 				MX6UL_PAD_GPIO1_IO07__ENET2_MDC		0x1b0b0
 				MX6UL_PAD_GPIO1_IO06__ENET2_MDIO	0x1b0b0
-				/* ETH_RESET, runs through SPARE3 in FPGA */
-				MX6UL_PAD_NAND_DQS__GPIO4_IO16		0x1b0b0
+				/* Spare_3, used for eth reset */
+				//MX6UL_PAD_NAND_DQS__GPIO4_IO16		0x1b0b0
+				MX6UL_PAD_JTAG_MOD__GPIO1_IO10      0x1f0b0
 				MX6UL_PAD_ENET2_RX_EN__ENET2_RX_EN	0x1b0b0
 				MX6UL_PAD_ENET2_RX_ER__ENET2_RX_ER	0x1b0b0
 				MX6UL_PAD_ENET2_RX_DATA0__ENET2_RDATA00	0x1b0b0
