--- a/arch/arm/boot/dts/imx6ul-ts7180.dts
+++ b/arch/arm/boot/dts/imx6ul-ts7180.dts
@@ -43,7 +43,7 @@
 			gpios = <&gpio4 25 GPIO_ACTIVE_LOW>;
 			default-state = "on";
 		};
-		
+
 		blue-led {
 			label = "blue-led";
 			gpios = <&gpio4 26 GPIO_ACTIVE_HIGH>;
@@ -91,20 +91,6 @@
 			states = <1300000 0x1 1400000 0x0>;
 		};
 
-		/*
-			reg_usb_otg1_vbus: regulator@2 {
-			compatible = "regulator-fixed";
-			reg = <2>;
-			pinctrl-names = "default";
-			pinctrl-0 = <&pinctrl_usb_otg1>;
-			regulator-name = "usb_otg1_vbus";
-			regulator-min-microvolt = <5000000>;
-			regulator-max-microvolt = <5000000>;
-			gpio = <&gpio1 4 GPIO_ACTIVE_HIGH>;
-			enable-active-high;
-		};
-   */
-
 		reg_sd1_vmmc: sd1_vmmc {
 			compatible = "regulator-fixed";
 			regulator-name = "SD1_SPWR";
@@ -113,8 +99,8 @@
 			gpio = <&gpio6 14 GPIO_ACTIVE_HIGH>;
 			enable-active-high;
 		};
-		
-		
+
+
 		reg_adc_vref: adc_vref {
 			compatible = "regulator-fixed";
 			regulator-name = "ADC_VREF";
@@ -123,16 +109,9 @@
 			//gpio = EN_2.5_VREF driven by Silabs;
 			//enable-active-high;
 		};
-		
+
 	};
 
-	/*pps {
-		compatible = "pps-gpio";
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_pps>;
-		gpios = <&gpio1 26 GPIO_ACTIVE_HIGH>;
-		status = "okay";
-	};*/
 };
 
 &cpu0 {
@@ -143,7 +122,7 @@
 
 &ecspi3 {
 	fsl,spi-num-chipselects = <3>;
-	cs-gpios = <&gpio4 12 0>, <&gpio4 10 0>, <&gpio4 27 0>;
+	cs-gpios = <&gpio4 12 0>, <&gpio3 0 0>, <&gpio4 27 0>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi3>;
 	status = "okay";
@@ -154,11 +133,28 @@
 		spi-max-frequency = <1000000>;
 	};
 
+
 	spioffbd: spi@1 {
 		compatible = "spidev";
 		reg = <1>;
+		spi-cs-high;	// HD1_SPI_CS is active high
 		spi-max-frequency = <1000000>;
 	};
+
+	/* Use this instead of "spioffbd: spi@1" if you want to connect an AT25
+		SPI eeprom to the daughter-board header...
+
+	  eeprom: at25@0 {
+				compatible = "atmel,at25";
+				at25,byte-len = <0x8000>;
+				at25,addr-mode = <2>;
+				at25,page-size = <64>;
+				spi-cs-high;	// HD1_SPI_CS is active high
+				reg = <1>;
+				spi-max-frequency = <1000000>;
+				status = "okay";
+		};
+	*/
 
 	spifram: spi@2 {
 		compatible = "spidev";
@@ -182,7 +178,7 @@
 		wilc3000,chip-en-gpios = <&gpio6 1 0>;   /* ENABLE, GPIO 161 */
 		wilc3000,irq-gpios = <&gpio5 8 0>;       /* IRQ,    GPIO 136 */
 		status = "okay";
-    };
+	 };
 };
 
 &fec1 {
@@ -368,12 +364,20 @@
 };
 
 &adc1 {
-   pinctrl-names = "default";
-   pinctrl-0 = <&pinctrl_adc>;
-   vref-supply = <&reg_adc_vref>;
-   num-channels = <10>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_adc>;
+	vref-supply = <&reg_adc_vref>;
+	num-channels = <10>;
 	status = "okay";
 };
+
+
+&pwm5 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_pwm5>;
+	status = "okay";
+};
+
 
 &iomuxc {
 	pinctrl-names = "default";
@@ -381,18 +385,26 @@
 	imx6ul-ts7180 {
 		pinctrl_hog: hoggrp {
 			fsl,pins = <
-				MX6UL_PAD_UART1_CTS_B__GPIO1_IO18    0x1b020 /* SPARE_1 */				
-				MX6UL_PAD_NAND_DQS__GPIO4_IO16       0x1b020 /* SPARE_3 */
+				MX6UL_PAD_UART1_CTS_B__GPIO1_IO18    0x1b020 /* SPARE_1 */
 				MX6UL_PAD_SNVS_TAMPER0__GPIO5_IO00   0x11020 /* POWER_FAIL */
 				MX6UL_PAD_SNVS_TAMPER1__GPIO5_IO01   0x1b020 /* FPGA_IRQ */
 				MX6UL_PAD_SNVS_TAMPER2__GPIO5_IO02   0x1b020 /* EN_FPGA_PWR */
 				MX6UL_PAD_NAND_WP_B__GPIO4_IO11      0x1b020 /* FPGA_RESET# */
-	         MX6UL_PAD_CSI_DATA02__GPIO4_IO23     0x1b020 /* EN_YEL_LED# */
-	         MX6UL_PAD_CSI_DATA03__GPIO4_IO24     0x1b020 /* EN_RED_LED# */
-	         MX6UL_PAD_CSI_DATA04__GPIO4_IO25     0x1b020 /* EN_GREEN_LED# */
-	         MX6UL_PAD_CSI_DATA05__GPIO4_IO26     0x1b020 /* EN_BLUE_LED */	  
-	         MX6UL_PAD_LCD_DATA06__GPIO3_IO11     0x1b020 /* NO_CHRG_JMP# */
+				MX6UL_PAD_LCD_DATA19__GPIO3_IO24     0x1b020 /* JTAG_FPGA_TDO */
+				MX6UL_PAD_LCD_VSYNC__GPIO3_IO03      0x1b020 /* JTAG_FPGA_TDI */
+				MX6UL_PAD_LCD_HSYNC__GPIO3_IO02      0x1b020 /* JTAG_FPGA_TMS */
+				MX6UL_PAD_LCD_ENABLE__GPIO3_IO01     0x1b020 /* JTAG_FPGA_TCK */
+				MX6UL_PAD_CSI_DATA02__GPIO4_IO23     0x1b020 /* EN_YEL_LED# */
+				MX6UL_PAD_CSI_DATA03__GPIO4_IO24     0x1b020 /* EN_RED_LED# */
+				MX6UL_PAD_CSI_DATA04__GPIO4_IO25     0x1b020 /* EN_GREEN_LED# */
+				MX6UL_PAD_CSI_DATA05__GPIO4_IO26     0x1b020 /* EN_BLUE_LED */
+				MX6UL_PAD_LCD_DATA06__GPIO3_IO11     0x1b020 /* NO_CHRG_JMP# */
+			>;
+		};
 
+		pinctrl_pwm5: ts7180pwm5 {
+			fsl,pins = <
+				MX6UL_PAD_NAND_DQS__PWM5_OUT         0x13020 /* SPARE_3 */
 			>;
 		};
 
@@ -408,7 +420,7 @@
 				MX6UL_PAD_GPIO1_IO04__GPIO1_IO04        0x10b0
 			>;
 		};
-     */
+	  */
 
 		pinctrl_flexcan1: flexcan1grp{
 			fsl,pins = <
@@ -450,8 +462,8 @@
 		pinctrl_uart4: uart4grp {
 			fsl,pins = <
 				MX6UL_PAD_UART4_RX_DATA__UART4_DCE_RX	0x1b0b1
-				MX6UL_PAD_UART4_TX_DATA__UART4_DCE_TX	0x1b0b1				
-			   MX6UL_PAD_UART1_RTS_B__GPIO1_IO19    0x13020 /* SPARE_2 EN_485 */
+				MX6UL_PAD_UART4_TX_DATA__UART4_DCE_TX	0x1b0b1
+				MX6UL_PAD_UART1_RTS_B__GPIO1_IO19    0x13020 /* SPARE_2 EN_485 */
 
 			>;
 		};
@@ -472,11 +484,11 @@
 
 		pinctrl_uart8: uart8grp {
 			fsl,pins = <
-			   MX6UL_PAD_LCD_DATA21__UART8_DCE_RX	0x1b0b1  /* RXD_GPS */
+				MX6UL_PAD_LCD_DATA21__UART8_DCE_RX	0x1b0b1  /* RXD_GPS */
 				MX6UL_PAD_LCD_DATA20__UART8_DCE_TX	0x1b0b1	/* TXD_GPS */
 			>;
 		};
-		
+
 		pinctrl_sai2: sai2grp {
 			fsl,pins = <
 				MX6UL_PAD_JTAG_TDI__SAI2_TX_BCLK	0x17088
@@ -558,22 +570,22 @@
 				MX6UL_PAD_SD1_DATA1__USDHC1_DATA1    0x17059
 				MX6UL_PAD_SD1_DATA2__USDHC1_DATA2    0x17059
 				MX6UL_PAD_SD1_DATA3__USDHC1_DATA3    0x17059
-								
+
 				MX6UL_PAD_CSI_DATA07__USDHC1_VSELECT     0x17059  /* SD1 VSELECT */
 			>;
 		};
 
-		
+
 		pinctrl_adc: adcgrp {
-		   fsl,pins = <		      
+			fsl,pins = <
 				MX6UL_PAD_GPIO1_IO04__GPIO1_IO04       0x1b020   /* ADC_1 */
 				MX6UL_PAD_GPIO1_IO05__GPIO1_IO05       0x1b020   /* ADC_2 */
 				MX6UL_PAD_GPIO1_IO08__GPIO1_IO08       0x1b020   /* ADC_3 */
 				MX6UL_PAD_GPIO1_IO09__GPIO1_IO09       0x1b020   /* ADC_4 */
-				
-		   >;
-		};   
-		
+
+			>;
+		};
+
 		pinctrl_usdhc1_100mhz: usdhc1grp100mhz {
 			fsl,pins = <
 				MX6UL_PAD_SD1_CMD__USDHC1_CMD     0x170b9
@@ -594,7 +606,7 @@
 				MX6UL_PAD_SD1_DATA2__USDHC1_DATA2 0x170f9
 				MX6UL_PAD_SD1_DATA3__USDHC1_DATA3 0x170f9
 			>;
-      };
+		};
 		pinctrl_usdhc2: usdhc2grp {
 			fsl,pins = <
 				MX6UL_PAD_NAND_RE_B__USDHC2_CLK     0x10069
@@ -609,10 +621,10 @@
 		pinctrl_ecspi3: ecspi3grp {
 			fsl,pins = <
 				MX6UL_PAD_NAND_READY_B__GPIO4_IO12  0x10b0 // SPI_3_FPGA_CS#
-				MX6UL_PAD_NAND_CE0_B__ECSPI3_SCLK   0x10b0
-				MX6UL_PAD_NAND_CE1_B__ECSPI3_MOSI   0x10b0
-				MX6UL_PAD_NAND_CLE__ECSPI3_MISO     0x10b0
-				MX6UL_PAD_NAND_ALE__GPIO4_IO10      0x10b0 // SPI_3_OFF_BD_CS#
+				MX6UL_PAD_NAND_CE0_B__ECSPI3_SCLK   0x10b0 // SPI_3_CLK
+				MX6UL_PAD_NAND_CE1_B__ECSPI3_MOSI   0x10b0 // SPI_3_MOSI
+				MX6UL_PAD_NAND_CLE__ECSPI3_MISO     0x10b0 // SPI_3_MISO
+				MX6UL_PAD_LCD_CLK__GPIO3_IO00       0x10b0 // HD1_SPI_CS (active hi)
 				MX6UL_PAD_CSI_DATA06__GPIO4_IO27    0x10b0 // FRAM_SPI_CS#
 			>;
 		};
