TS-4100: Add ENET CLK ref and names to both eth PHY. Allows the micrel PHY driver to derive intended clock frequency

--- a/arch/arm/boot/dts/imx6ul-ts4100.dtsi
+++ b/arch/arm/boot/dts/imx6ul-ts4100.dtsi
@@ -206,11 +206,15 @@
 		#size-cells = <0>;
 
 		ethphy0: ethernet-phy@2 {
+			clocks = <&clks IMX6UL_CLK_ENET_REF>;
+			clock-names = "rmii-ref";
 			compatible = "ethernet-phy-ieee802.3-c22";
 			reg = <2>;
 		};
 
 		ethphy1: ethernet-phy@1 {
+			clocks = <&clks IMX6UL_CLK_ENET2_REF>;
+			clock-names = "rmii-ref";
 			compatible = "ethernet-phy-ieee802.3-c22";
 			reg = <1>;
 		};
