tsimx6ul_defconfig: Move to using the new wilc driver as a module

--- a/arch/arm/configs/tsimx6ul_defconfig
+++ b/arch/arm/configs/tsimx6ul_defconfig
@@ -543,9 +543,23 @@ CONFIG_ZD1211RW=m
 CONFIG_RSI_91X=m
 # CONFIG_RSI_DEBUGFS is not set
 # CONFIG_RSI_SDIO is not set
-CONFIG_ATMEL_SMARTCONNECT=y
-CONFIG_WILC3000=m
-CONFIG_WILC3000_SPI=y
+CONFIG_RSI_USB=m
+CONFIG_WILC=m
+# CONFIG_WILC_SDIO is not set
+CONFIG_WILC_SPI=m
+# CONFIG_ATMEL_SMARTCONNECT is not set
+
+#
+# Enable WiMAX (Networking options) to see the WiMAX drivers
+#
+# CONFIG_WAN is not set
+# CONFIG_ISDN is not set
+
+#
+# Input device support
+#
+CONFIG_INPUT=y
+# CONFIG_INPUT_FF_MEMLESS is not set
 CONFIG_INPUT_POLLDEV=y
 # CONFIG_INPUT_MOUSEDEV_PSAUX is not set
 CONFIG_INPUT_JOYDEV=m
