TS-7180:   Made the FRAM use the AT25 EEPROM driver.   Added interrupt line for Gyroscope chip

--- a/arch/arm/boot/dts/imx6ul-ts7180.dts
+++ b/arch/arm/boot/dts/imx6ul-ts7180.dts
@@ -156,11 +156,18 @@
 		};
 	*/
 
-	spifram: spi@2 {
-		compatible = "spidev";
-		reg = <2>;
-		spi-max-frequency = <1000000>;
-	};
+
+	/* This is actually the FRAM, which is compatible with the AT25 SPI EEPROM */
+	 eeprom: at25@2 {
+				compatible = "atmel,at25";
+				at25,byte-len = <512>;
+				at25,addr-mode = <2>;
+				at25,page-size = <32>;
+				reg = <2>;
+				spi-max-frequency = <1000000>;
+				status = "okay";
+		};
+
 };
 
 &ecspi4 {
@@ -324,9 +331,22 @@
 	scl-gpios = <&gpio1 2 GPIO_ACTIVE_HIGH>;
 	sda-gpios = <&gpio1 3 GPIO_ACTIVE_HIGH>;
 
+
 	rtc: m41t00s@68 {
 		compatible = "m41t00";
 		reg = <0x68>;
+	};
+
+	imu: mpu9250a@68 {
+		compatible = "mpu9250";
+		reg = <0x69>;
+		interrupt-parent = <&gpio4>;
+		interrupts = <20 IRQ_TYPE_EDGE_RISING>;
+	};
+
+	magnetometer: ak8963@0c {
+		compatible = "ak8963";
+		reg = <0x0C>;
 	};
 };
 
@@ -385,20 +405,21 @@
 	imx6ul-ts7180 {
 		pinctrl_hog: hoggrp {
 			fsl,pins = <
-				MX6UL_PAD_UART1_CTS_B__GPIO1_IO18    0x1b020 /* SPARE_1 */
-				MX6UL_PAD_SNVS_TAMPER0__GPIO5_IO00   0x11020 /* POWER_FAIL */
-				MX6UL_PAD_SNVS_TAMPER1__GPIO5_IO01   0x1b020 /* FPGA_IRQ */
-				MX6UL_PAD_SNVS_TAMPER2__GPIO5_IO02   0x1b020 /* EN_FPGA_PWR */
-				MX6UL_PAD_NAND_WP_B__GPIO4_IO11      0x1b020 /* FPGA_RESET# */
-				MX6UL_PAD_LCD_DATA19__GPIO3_IO24     0x1b020 /* JTAG_FPGA_TDO */
-				MX6UL_PAD_LCD_VSYNC__GPIO3_IO03      0x1b020 /* JTAG_FPGA_TDI */
-				MX6UL_PAD_LCD_HSYNC__GPIO3_IO02      0x1b020 /* JTAG_FPGA_TMS */
-				MX6UL_PAD_LCD_ENABLE__GPIO3_IO01     0x1b020 /* JTAG_FPGA_TCK */
-				MX6UL_PAD_CSI_DATA02__GPIO4_IO23     0x1b020 /* EN_YEL_LED# */
-				MX6UL_PAD_CSI_DATA03__GPIO4_IO24     0x1b020 /* EN_RED_LED# */
-				MX6UL_PAD_CSI_DATA04__GPIO4_IO25     0x1b020 /* EN_GREEN_LED# */
-				MX6UL_PAD_CSI_DATA05__GPIO4_IO26     0x1b020 /* EN_BLUE_LED */
-				MX6UL_PAD_LCD_DATA06__GPIO3_IO11     0x1b020 /* NO_CHRG_JMP# */
+				MX6UL_PAD_UART1_CTS_B__GPIO1_IO18 	0x1b020 /* SPARE_1 */
+				MX6UL_PAD_SNVS_TAMPER0__GPIO5_IO00	0x11020 /* POWER_FAIL */
+				MX6UL_PAD_SNVS_TAMPER1__GPIO5_IO01	0x1b020 /* FPGA_IRQ */
+				MX6UL_PAD_SNVS_TAMPER2__GPIO5_IO02	0x1b020 /* EN_FPGA_PWR */
+				MX6UL_PAD_NAND_WP_B__GPIO4_IO11		0x1b020 /* FPGA_RESET# */
+				MX6UL_PAD_LCD_DATA19__GPIO3_IO24	0x1b020 /* JTAG_FPGA_TDO */
+				MX6UL_PAD_LCD_VSYNC__GPIO3_IO03		0x1b020 /* JTAG_FPGA_TDI */
+				MX6UL_PAD_LCD_HSYNC__GPIO3_IO02		0x1b020 /* JTAG_FPGA_TMS */
+				MX6UL_PAD_LCD_ENABLE__GPIO3_IO01	0x1b020 /* JTAG_FPGA_TCK */
+				MX6UL_PAD_CSI_DATA02__GPIO4_IO23	0x1b020 /* EN_YEL_LED# */
+				MX6UL_PAD_CSI_DATA03__GPIO4_IO24	0x1b020 /* EN_RED_LED# */
+				MX6UL_PAD_CSI_DATA04__GPIO4_IO25	0x1b020 /* EN_GREEN_LED# */
+				MX6UL_PAD_CSI_DATA05__GPIO4_IO26	0x1b020 /* EN_BLUE_LED */
+				MX6UL_PAD_LCD_DATA06__GPIO3_IO11	0x1b020 /* NO_CHRG_JMP# */
+				MX6UL_PAD_CSI_HSYNC__GPIO4_IO20		0x03020 /* GYRO_INT */
 			>;
 		};
 
