--- a/arch/arm/boot/dts/imx6qdl-ts4900.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-ts4900.dtsi
@@ -124,6 +124,17 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi2>;
 	status = "okay";
+
+	serial1: max3100-1@0 {
+		compatible = "max3100-ts";
+		reg = <0>;
+		interrupt-parent = <&gpio1>;
+		interrupts = <4 IRQ_TYPE_LEVEL_LOW>;
+		spi-max-frequency = <10000000>;
+		loopback = <0>;
+		crystal = <1>;
+		poll-time = <100>;
+	};
 };
 
 &fec {
