--- a/arch/arm/boot/dts/imx6qdl-ts7970.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-ts7970.dtsi
@@ -212,6 +212,19 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi2>;
 	status = "okay";
+
+	serial1: max3100-0@0 {
+		compatible = "max3100-ts";
+		reg = <0>;
+		interrupt-parent = <&gpio1>;
+		interrupts = <4 IRQ_TYPE_LEVEL_LOW>;
+		spi-max-frequency = <1000000>;
+		loopback = <0>;
+		crystal = <1>;
+		poll-time = <100>;
+		fifo-size = <16>;
+	};
+	
 };
 
 &fec {
