--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -359,6 +359,12 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6dl-ts4900-2.dtb \
 	imx6dl-ts4900-14.dtb \
 	imx6dl-ts7970.dtb \
+	imx6dl-ts7990-lxd-revb.dtb \
+	imx6dl-ts7990-lxd.dtb \
+	imx6dl-ts7990-microtips-revb.dtb \
+	imx6dl-ts7990-microtips.dtb \
+	imx6dl-ts7990-okaya-revb.dtb \
+	imx6dl-ts7990-okaya.dtb \
 	imx6dl-tx6dl-comtft.dtb \
 	imx6dl-tx6s-8034.dtb \
 	imx6dl-tx6s-8035.dtb \
@@ -430,6 +436,12 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6q-ts4900-2.dtb \
 	imx6q-ts4900-14.dtb \
 	imx6q-ts7970.dtb \
+	imx6q-ts7990-lxd-revb.dtb \
+	imx6q-ts7990-lxd.dtb \
+	imx6q-ts7990-microtips-revb.dtb \
+	imx6q-ts7990-microtips.dtb \
+	imx6q-ts7990-okaya-revb.dtb \
+	imx6q-ts7990-okaya.dtb \
 	imx6q-tx6q-1010.dtb \
 	imx6q-tx6q-1010-comtft.dtb \
 	imx6q-tx6q-1020.dtb \
