--- a/arch/arm/configs/ts4900_defconfig
+++ b/arch/arm/configs/ts4900_defconfig
@@ -2481,6 +2481,10 @@ CONFIG_ATH10K_PCI=m
 CONFIG_WCN36XX=m
 # CONFIG_WCN36XX_DEBUGFS is not set
 CONFIG_WLAN_VENDOR_ATMEL=y
+CONFIG_WILC=m
+CONFIG_WLAN_VENDOR_MCHP=y
+# CONFIG_WILC_SDIO is not set
+CONFIG_WILC_SPI=m
 CONFIG_ATMEL=m
 CONFIG_PCI_ATMEL=m
 CONFIG_AT76C50X_USB=m
