--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -358,6 +358,7 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6dl-ts4900.dtb \
 	imx6dl-ts4900-2.dtb \
 	imx6dl-ts4900-14.dtb \
+	imx6dl-ts4900-15.dtb \
 	imx6dl-ts7970.dtb \
 	imx6dl-ts7990-lxd-revb.dtb \
 	imx6dl-ts7990-lxd.dtb \
@@ -435,6 +436,7 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6q-ts4900.dtb \
 	imx6q-ts4900-2.dtb \
 	imx6q-ts4900-14.dtb \
+	imx6q-ts4900-15.dtb \
 	imx6q-ts7970.dtb \
 	imx6q-ts7990-lxd-revb.dtb \
 	imx6q-ts7990-lxd.dtb \
